tests/fail/compile-fail-0.stderr
error[E0716]: temporary value dropped while borrowed
 --> tests/ui/compile-fail-0.rs:4:14
  |
4 |         x = &String::new();
  |              ^^^^^^^^^^^^^- temporary value is freed at the end of this statement
  |              |
  |              creates a temporary value which is freed while still in use
5 |     }
6 |     println!("{}", x);
  |                    - borrow later used here
  |
  = note: consider using a `let` binding to create a longer lived value
